--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,20 @@
             <version>4.11</version>
         </dependency>
     </dependencies>
-
+	
+	<build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+      </plugin>
+    </plugins>
+  </build>
+   <scm>
+        <url>https://bitbucket.org/rciovati/my-repo/src</url>
+        <connection>scm:git:ssh://git@bitbucket.org/rciovati/my-repo.git</connection>
+        <developerConnection>scm:git:ssh://git@bitbucket.org/rciovati/my-repo.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 </project>
