--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>MavenTest</groupId>
     <artifactId>MavenTest</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
