--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   </build>
    <scm>
         <url>https://github.com/tcqa-repos/MavenHW</url>
-        <connection>scm:git:https://git@github.com/tcqa-repos/MavenHW.git</connection>
+        <connection>scm:git:ssh://git@github.com/tcqa-repos/MavenHW.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/tcqa-repos/MavenHW.git</developerConnection>
         <tag>MavenTest-1.1</tag>
     </scm>
