--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 	<distributionManagement>
    <repository>
       <id>nexus-releases</id>
-      <url>http://localhost:8081/nexus/content/repositories/releases</url>
+      <url>http://unit-421:8081/nexus/content/repositories/releases</url>
    </repository>
 </distributionManagement>
 </project>
