[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>MavenTest</groupId>
     <artifactId>MavenTest</artifactId>
-    <version>1.4</version>
+    <version>1.5-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -29,7 +29,7 @@
         <url>https://github.com/tcqa-repos/MavenHW</url>
         <connection>scm:git:ssh://git@github.com/tcqa-repos/MavenHW.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/tcqa-repos/MavenHW.git</developerConnection>
-        <tag>MavenTest-1.4</tag>
+        <tag>MavenTest-1.1</tag>
     </scm>
 	<distributionManagement>
    <repository>
